data/resources/style_gtk.css
/*
** main_window
*/

paned.sidebar_paned {
    background-color: mix(@theme_base_color, @theme_bg_color, 0.5);
}

/*
** document view
*/

box.autocomplete {
    padding: 0px;
}
box.autocomplete list {
    background-color: #fff895;
    border-radius: 1px;
}
box.autocomplete list row {
    padding-top: 0px;
    padding-bottom: 0px;
    padding-left: 2px;
    padding-right: 2px;
    border-radius: 1px;
}
box.autocomplete list row:selected {
    background: mix(@borders, @theme_bg_color, 0.5);
    background: #f8e45c;
}
box.autocomplete list row:not(:selected) {
    background-color: @theme_bg_color;
    background-color: #fff895;
}
box.autocomplete list label {
    color: #000;
}
box.autocomplete label.infobox {
    border-top: 1px dotted mix(#f9f4af, #000, 0.2);
    border-radius: 1px;
    padding-top: 1px;
    padding-bottom: 2px;
    padding-left: 3px;
    padding-right: 3px;
    font-size: 13px;
    color: #000;
    background-color: #f9f4af;
}

/*
** open documents
*/

popover.documentchooser > box {
    margin: 9px;
}
popover.documentchooser entry {
    margin-bottom: 6px;
}
popover.documentchooser scrolledwindow {
    margin-bottom: 12px;
}
popover.documentchooser list row {
}
popover.documentchooser list row label {
    margin-left: 8px;
    margin-right: 8px;
    margin-top: 3px;
    margin-bottom: 5px;
    color: @theme_fg_color;
}
popover.documentchooser list row label.folder {
    margin-top: 5px;
    font-size: 9pt;
    color: mix(@theme_base_color, @theme_fg_color, 0.6);
}
popover.documentchooser box.not_found {
    margin-bottom: 12px;
}
popover.documentchooser box.not_found image {
    opacity: 0.5;
}
popover.documentchooser box.not_found label {
    opacity: 0.65;
}

/* 
** tab switching
*/

.open-docs-popover-button {
    padding: 0px 10px;
    padding-left: 2px;
    margin-top: 0;
    margin-bottom: 0;
    margin-left: 22px;
    border-radius: 0;
    border-top-width: 0px;
    border-bottom-width: 0px;
    box-shadow: none;
    transition: none;
}
.open-docs-popover-button:hover:not(:active) {
    background: none;
    text-shadow: none;
}
.open-docs-popover,
.open-docs-popover list,
.open-docs-popover row:not(:hover):not(:selected) {
    background-color: @theme_bg_color;
}
.open-docs-popover .frame {
    border-width: 0px;
    outline: none;
}
.open-docs-popover row {
    border-radius: 4px;
    padding: 2px 1px 2px 4px;
    color: @theme_fg_color;
}
.open-docs-popover list {
    padding: 0px;
    margin: 0px;
}
.open-docs-popover list button {
    padding: 0px 0px;
    margin-top: 0;
    margin-bottom: 0;
    margin-left: 12px;
    opacity: 0.5;
    border-style: none;
    border-width: 0px;
    box-shadow: none;
    outline: none;
}
.open-docs-popover list button:hover:not(:backdrop) {
    background-image: none;
    opacity: 1;
    border-style: none;
    border-width: 0px;
}
popover label.explaination {
    margin-left: 5px;
    margin-right: 5px;
    color: mix(@theme_fg_color, @theme_bg_color, 0.3);
    font-size: 13px;
}
.open-docs-popover label.master-label {
    opacity: 0.3;
}
popover label.explaination-header {
    margin-left: 5px;
    margin-right: 5px;
    font-weight: bold;
}
button.like-model {
    border-width: 0px;
    box-shadow: none;
    padding: 1px 5px 1px 5px;
    margin: 0px;
    background: transparent;
    outline: none;
}
button.like-model:hover {
    background: @theme_base_color;
    transition: none;
}
.open-docs-popover list .icon {
    padding-top: 3px;
    padding-bottom: 3px;
}
.open-docs-popover list.selection-mode .radio-hover {
    padding-top: 3px;
    padding-bottom: 3px;
    opacity: 0;
}
.open-docs-popover list.selection-mode row:hover .radio-hover {
    opacity: 1;
}

/*
** build widget
*/

box.build-widget button {
    margin-left: 6px;
}
box.build-widget label.build-timer {
    padding: 6px 12px;
    border: 0px solid @borders;
    border-right-width: 0px;
}

/*
** build log
*/

box.buildlog > box {
    background: @theme_base_color;
}
box.buildlog > box label {
    padding-left: 12px;
}
box.buildlog > box button {
    margin: 6px;
}
box.buildlog list row {
    padding-top: 3px;
    padding-bottom: 3px;
}
box.buildlog list {
    padding-bottom: 6px;
}

/*
** sidebar
*/

box.sidebar toolbar {
    padding: 0px;
    margin: 0px;
    background-color: mix(@theme_base_color, @theme_bg_color, 0.5);
    border-bottom: 1px solid mix(@theme_base_color, @borders, 0.5);
}
box.sidebar toolbar toolbutton {
    padding: 0px;
    margin: 0px;
}
box.sidebar toolbar button {
    margin: 0px;
    padding: 6px;
    border-width: 0px;
    border-radius: 0px;
    box-shadow: none;
}
box.sidebar toolbar toolbutton.first button {
    border-top-width: 0px;
}
box.sidebar toolbar button:checked {
    background: mix(@theme_base_color, @borders, 0.45);
}
box.sidebar toolbar button:active {
    background: mix(@theme_base_color, @borders, 0.45);
}
box.sidebar > box {
    background-color: @theme_base_color;
}
box.sidebar flowbox flowboxchild {
    padding: 0px;
}
box.sidebar flowbox flowboxchild button {
    background: none;
    background-color: @theme_base_color;
    border-left-width: 0px;
    border-right-width: 1px;
    border-bottom-width: 1px;
    border-top-width: 0px;
    border-color: mix(@borders, @theme_base_color, 0.68);
    margin: 0px;
    padding: 5px;
    border-radius: 0px;
    box-shadow: none;
}
box.sidebar flowbox flowboxchild button:active {
    background-color: mix(@theme_bg_color, @theme_base_color, 0.5);
}
box.sidebar flowbox flowboxchild button.no_right_border {
    border-right-width: 0px;
}
box.sidebar flowbox flowboxchild button.no_bottom_border {
    border-bottom-width: 0px;
}

/*
** shortcuts bar
*/

box.shortcutsbar {
    background-color: mix(@theme_base_color, @theme_bg_color, 0.5);
    border-bottom: 1px solid mix(@theme_base_color, @borders, 0.5);
}
box.shortcutsbar toolbar {
    padding: 0px;
    margin: 0px;
    background-color: mix(@theme_base_color, @theme_bg_color, 0.5);
}
/* ... */

